# bevy-greedy-snake

./: .gitignore  Cargo.toml
src/: main.rs
