[package]
name = "greedy-snake"
version = "0.1.0"
edition = "2024"
resolver = "2"


[profile.dev]
opt-level = 1


[profile.dev.package."*"]
opt-level = 3


[profile.release]
lto = "fat"
codegen-units = 1


[dependencies]
rand = { version = "*" }


[dependencies.bevy]
version = "*"
features = ["dynamic_linking", "trace"]
